# tinybinmat

./: README.md  pyproject.toml  setup.py  test_conv.py  test_prbs.py  test_prbs_exp.py  test_tbm.py  tinybinmat.c  tinybinmat.h  tinybinmat_avx2.c  tinybinmat_avx2.h  tinybinmat_conv.c  tinybinmat_conv.h  tinybinmat_gfni.c  tinybinmat_gfni.h  tinybinmat_gfnio.c  tinybinmat_gfnio.h  tinybinmat_perm.c  tinybinmat_perm.h  tinybinmat_py.c  tinybinmat_simd.c  tinybinmat_template.c  tinybinmat_utils.c  tinybinmat_utils.h
.github/workflows/: python-package.yml
